@@ -4,7 +4,7 @@
 
   DEVELOPMENT STATE
 
-    o  OpenSSL 1.0:  Under development...
+    o  OpenSSL 1.0.0-beta1: Released on April 1st, 2009
     o  OpenSSL 0.9.8h: Released on May       28th, 2008
     o  OpenSSL 0.9.8g: Released on October   19th, 2007
     o  OpenSSL 0.9.8f: Released on October   11th, 2007
